--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
     "singleQuote": true,
     "useTabs": false,
     "tabWidth": 4,
+    "printWidth": 100,
     "plugins": [
         "prettier-plugin-organize-imports",
         "prettier-plugin-tailwindcss"
